<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <GVL Name="GVL_CoupledAfterStartup" Id="{197d9202-dd0f-43a8-a9c2-c3e9ba80d67e}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	TestPitch_LimitSwitches : HOMS_PitchMechanism := (ReqPosLimHi:=2000,
		                                              ReqPosLimLo:=-2000,
		                                              diEncPosLimHi:=10768330,
		                                              diEncPosLimLo:=8141680);

	// Test Motors
	M1 : DUT_MotionStage;
	M2 : DUT_MotionStage;
	M3 : DUT_MotionStage;
	M4 : DUT_MotionStage;
	M5 : DUT_MotionStage;
	
	bFirstCycle : BOOL := TRUE;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>