<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <GVL Name="GVL_DecoupledGantryDecrease" Id="{08941fe7-1678-45c2-8bec-57de49574ce3}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	// Test Motors
	M1 : DUT_MotionStage;
	M2 : DUT_MotionStage;
	
	// Test Encoders
	stMasterEnc : ST_RenishawAbsEnc;
	stSlaveEnc : ST_RenishawAbsEnc;

	bExecuteCoupleIn : BOOL;
	bExecuteDecoupleIn : BOOL;
	bGantryAlreadyCoupledOut : BOOL;
	nCycleCount : INT;
	fbAutoCouple : FB_GantryAutoCoupling;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>